# iothackbot

./: .gitignore  README.md  pyproject.toml
.claude/skills/ffind/: SKILL.md
.claude/skills/iotnet/: SKILL.md
.claude/skills/onvifscan/: SKILL.md
.claude/skills/picocom/: SKILL.md
.claude/skills/telnetshell/: SKILL.md
.claude/skills/wsdiscovery/: SKILL.md
skills/logicmso/: SKILL.md
